@@ -420,7 +420,7 @@ for _, boiler in pairs(data.raw.boiler) do
                             subgroup = "boiler-sluid-converter",
                             category = "boiler-omnifluid-"..boiler.name,
                             order = "g[hydromnic-acid]",
-                            energy_required = math.max(omni.fluid.sluid_contain_fluid/boiler_consumption, 0.0011),
+                            energy_required = math.max(omni.fluid.sluid_contain_fluid/boiler_consumption/4, 0.0011),
                             enabled = true,
                             hide_from_player_crafting = true,
                             main_product = steam,
@@ -448,7 +448,7 @@ for _, boiler in pairs(data.raw.boiler) do
                             subgroup = "boiler-sluid-converter",
                             category = "boiler-omnifluid-"..boiler.name,
                             order = "g[hydromnic-acid]",
-                            energy_required = math.max(omni.fluid.sluid_contain_fluid / boiler_consumption, 0.0011),
+                            energy_required = math.max(omni.fluid.sluid_contain_fluid/boiler_consumption/4, 0.0011),
                             enabled = true,
                             hide_from_player_crafting = true,
                             main_product = fugacity.name,
@@ -467,7 +467,7 @@ for _, boiler in pairs(data.raw.boiler) do
                         subgroup = "boiler-sluid-converter",
                         category = "general-omni-boiler",
                         order = "g[hydromnic-acid]",
-                        energy_required = math.max(omni.fluid.sluid_contain_fluid/boiler_consumption, 0.0011),
+                        energy_required = math.max(omni.fluid.sluid_contain_fluid/boiler_consumption/4, 0.0011),
                         enabled = true,--may change this to be linked to the boiler unlock if applicable
                         hide_from_player_crafting = true,
                         main_product = fugacity.name,
